feat: add ssl config

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ REMOTE_SERVER_URL=http://localhost:8011
 
 REMOTE_SERVER_PORT=8011
 AUTH_TOKEN=1234567890
+
+CERT=/path/to/server.crt
+PRIVATE_KEY=/path/to/private.key
+REJECT_UNAUTHORIZED=true
