--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@mutagen-d/socket.io-proxy",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Proxy server with socket.io tunneling",
   "main": "src/local.js",
   "scripts": {
     "local": "node src/proxy.js",
     "remote": "node src/remote.js",
+    "gen-cert": "openssl req -nodes -new -x509 -keyout private.key -out server.crt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
